Change to ERC100, fix the z-index problem

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -658,7 +658,12 @@ label.error {
   padding: 10px;
   border-radius: 5px 0 0 5px;
 }
+#price-table {
+  z-index: 5;
+  position: absolute;
+}
 footer {
+  z-index: 10;
   position: absolute;
   bottom: 20px;
   left: 30px;
